<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityStyle"
    tools:context=".ExerciseControlActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/CTenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_centerHorizontal="true"
        android:text="@string/Active" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/PTenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_centerHorizontal="true"
        android:text="@string/Active" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SBenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_centerHorizontal="true"
        android:text="@string/Active" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/VSenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView12"
        android:text="@string/Active" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SRenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:text="@string/Active" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/VTenabler"
        style="@style/commonLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:text="@string/Active" />

    <TextView
        android:id="@+id/textView12"
        style="@style/commonLabels"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SBenabler"
        android:layout_marginTop="25dp"
        android:text="@string/VS" />

    <TextView
        android:id="@+id/textView10"
        style="@style/commonLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CTenabler"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/PT" />

    <TextView
        android:id="@+id/textView11"
        style="@style/commonLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/PTenabler"
        android:layout_marginTop="25dp"
        android:text="@string/SB" />

    <TextView
        android:id="@+id/textView9"
        style="@style/commonLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SRenabler"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/CT" />

    <TextView
        android:id="@+id/textView8"
        style="@style/commonLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/VTenabler"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/SR" />

    <TextView
        android:id="@+id/textView7"
        style="@style/commonLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PNenabler"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/VT" />

    <TextView
        android:id="@+id/textView6"
        style="@style/commonLabels"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/PN" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/PNenabler"
        style="@style/commonLabels"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Active" />

</RelativeLayout>
