<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaistActivity"
    style="@style/ActivityStyle">

    <ImageButton
        android:id="@+id/waistIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button11"
        app:srcCompat="@mipmap/waist_white_foreground" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentTop="true"
        android:clickable="false"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentWaist"
        android:background="@color/transparent"
        android:clickable="false"/>

    <TextView
        android:id="@+id/currentWaist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/waistIcon"
        android:fontFamily="@font/pragmatica_common"
        android:gravity="center"
        android:text="@string/currentValue"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addButton"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cerise"
        android:fontFamily="@font/pragmatica_common"
        android:textSize="13sp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cerise"
        android:fontFamily="@font/pragmatica_common"
        android:text="@string/toWaist"
        android:textSize="13sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_below="@id/deleteButton">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>
</RelativeLayout>